fix: remove scrollbar-gutter: stable

--- a/packages/themes/src/scrollbar.css
+++ b/packages/themes/src/scrollbar.css
@@ -5,7 +5,6 @@
 }
 
 * {
-  scrollbar-gutter: stable;
   scrollbar-color: var(--scrollbar-color) var(--scrollbar-track-color);
   scrollbar-width: thin;
 }
